--- a/content.css
+++ b/content.css
@@ -187,6 +187,24 @@
 .content h6 a {
   color: #000;
 }
+.content h1 a:visited {
+  color:#7D2823;
+}
+.content h2 a:visited {
+  color:#7D2823;
+}
+.content h3 a:visited {
+  color:#A2332C;
+}
+.content h4 a:visited {
+  color: #A2332C;
+}
+.content h5 a:visited {
+  color: #A2332C;
+}
+.content h6 a:visited {
+  color: #000;
+}
 /* numbered list */
 .content ol li {
   list-style-type: decimal;
